@@ -23,7 +23,7 @@ public class AiSummaryUtil {
         ChatMessage systemMessage = ChatMessage.builder()
                 .role(ChatMessageRole.SYSTEM)
                 .content("【智能财务助手操作指南】\n" +
-                        "你是一位专业财务规划师，请按以下步骤分析用户提供的完整财务数据：\n" +
+                        "你是一位专业财务规划师，请按以下步骤分析用户提供的完整财务数据，注意，用户有多个账本，发给你的详细数据只是一个账本，而总资产、总负债是所有账本累计，因此可能出现对不上的情况：\n" +
                         "\n" +
                         "第一步：全景财务扫描\n" +
                         "仔细审阅用户提供的：\n" +
@@ -33,17 +33,13 @@ public class AiSummaryUtil {
                         "按消费分类整理的收支报表\n" +
                         "按场景标签整理的收支明细\n" +
                         "通过交叉比对上述数据，完成：\n" +
-                        "简单复述一下用户的收支情况，大概走向\n"+
+                        "简单复述一下用户的收支情况，消费行为概述，消费喜好，大概走向，并且简单评价一下\n"+
                         "▸ 生成三色预警结论（绿-优秀/黄-注意/红-危险）\n" +
                         "\n" +
                         "第二步：深度收支审查\n" +
-                        "针对分类报表：\u200B\n" +
-                        "• 标记波动异常项（如\"餐饮支出较上月增长超15%\"）\n" +
-                        "• 识别结构失衡项（如\"娱乐支出占比超过推荐阈值\"）\n" +
-                        "• 标注季节性合理波动（如\"12月礼品支出增加属正常现象\"）\n" +
-                        "\n" +
-                        "针对标签报表：\u200B\n" +
-                        "• 发现高频小额消费模式（如\"每日超过3次咖啡消费\"）\n" +
+                        "针对分类报表和详细数据：\u200B\n" +
+                        "• 识别结构失衡项（如娱乐支出占比超过推荐阈值，或者是餐饮支出过高等）\n" +
+                        "• 如果有高频小额消费模式则指出（如\"每日超过3次咖啡消费\"）\n" +
                         "• 定位非理性消费特征（如\"夜间10点后网购占比过高\"）\n"+
                         "\n" +
                         "第三步：生成智慧建议\n" +
@@ -51,6 +47,7 @@ public class AiSummaryUtil {
                         "▶ 按优先级列出3条可执行建议（示例：\"建议将外卖预算降低20%，通过每周3次自炊实现\"）\n" +
                         "若无显著问题：\n" +
                         "▶ 突出财务亮点（示例：\"本月教育投资占比提升10%，知识储备增值显著\"）\n" +
+                        "如果用户财务结构过于不合理，你可以用略微激烈的语气教育用户，让用户醒悟"+
                         "\n" +
                         "第四步：定制化激励\n" +
                         "根据分析结论动态生成鼓励语：\n" +
@@ -70,46 +67,14 @@ public class AiSummaryUtil {
 
         ChatCompletionRequest chatCompletionRequest = ChatCompletionRequest.builder()
                 // 指定您创建的方舟推理接入点 ID，此处已帮您修改为您的推理接入点 ID
-                .model("ep-20250314103600-wbwct")
+//                .model("ep-20250314103600-wbwct")//豆包lite接入点
+                .model("ep-20250325152358-wvsv6")//deepseek r1接入点
                 .messages(messages)
                 .build();
-        List<Object> collect = arkService.createChatCompletion(chatCompletionRequest).getChoices().stream().map(chatCompletionChoice -> chatCompletionChoice.getMessage().getContent()).collect(Collectors.toList());
+        List<Object> collect = arkService.createChatCompletion(chatCompletionRequest).getChoices().stream().map(chatCompletionChoice -> chatCompletionChoice.getMessage().getContent()).toList();
 
         return (String) collect.get(0);
     }
 
 
-//    public String getJsonSummary(String userMessageFromRequest){
-//
-//
-//        final List<ChatMessage> messages = new ArrayList<>();
-//        final ChatMessage userMessage = ChatMessage.builder().role(ChatMessageRole.USER).content("北京今天天气如何？").build();
-//        messages.add(userMessage);
-//
-//        final List<ChatTool> tools = Arrays.asList(
-//                new ChatTool(
-//                        "function",
-//                        new ChatFunction.Builder()
-//                                .name("get_current_weather")
-//                                .description("获取给定地点的天气")
-//                                .parameters(new Weather(
-//                                        "object",
-//                                        new HashMap<String, Object>() {{
-//                                            put("location", new HashMap<String, String>() {{
-//                                                put("type", "string");
-//                                                put("description", "T地点的位置信息，比如北京");
-//                                            }});
-//                                            put("unit", new HashMap<String, Object>() {{
-//                                                put("type", "string");
-//                                                put("enum", Arrays.asList("摄氏度", "华氏度"));
-//                                            }});
-//                                        }},
-//                                        Collections.singletonList("location")
-//                                ))
-//                                .build()
-//                )
-//        );
-//
-//
-//    }
 }
